--- a/src/app/add-etab/add-etab.component.html
+++ b/src/app/add-etab/add-etab.component.html
@@ -1,1 +1,27 @@
-<p>add-etab works!</p>
+<div class="container">
+    <h1>Ajouter un etablissement</h1>
+    <form [formGroup]="form" (ngSubmit)="submit()">
+      <fieldset>
+        
+        <div class="form-group">
+         <b><label for="nom">Entrez le code de l'etablissement</label></b>
+          <input type="text" class="form-control" id="code_etab" formControlName="code_etab"
+          placeholder="code_etab">
+        </div>
+        
+        <div class="form-group">
+           <b><label for="nom">Entrez le nom de l'etablissement</label></b>
+            <input type="text" class="form-control" id="nom_etab" formControlName="nom_etab" placeholder="nom_etab">
+          </div>
+
+       
+        <div class="form-group">
+            <b><label for="nom">Entrez l'universite à laquelle appartient cet etablissement</label></b>
+            <input type="text" class="form-control" id="universite" formControlName="universite" placeholder="universite">
+          </div>
+        
+          <button type="button" class="btn btn-info" type="submit" >Enregistrer</button>
+
+      </fieldset>
+    </form>
+</div>
