--- a/src/app/add-filiere/add-filiere.component.html
+++ b/src/app/add-filiere/add-filiere.component.html
@@ -1,1 +1,26 @@
-<p>add-filiere works!</p>
+<div class="container">
+    <h1>Ajouter un etablissement</h1>
+    <form [formGroup]="form" (ngSubmit)="submit()">
+      <fieldset>
+        
+        <div class="form-group">
+         <b><label for="nom">Entrez le code de la filiére</label></b>
+          <input type="text" class="form-control" id="code_filiere" formControlName="code_filiere"
+          placeholder="code_filiere">
+        </div>
+        
+        <div class="form-group">
+           <b><label for="nom">Entrez le nom de la filiere</label></b>
+            <input type="text" class="form-control" id="nom_filiere" formControlName="nom_filiere" placeholder="nom_filiere">
+          </div>
+       
+        <div class="form-group">
+            <b><label for="nom">Entrez l'etablissement à laquelle appartient cette filiére</label></b>
+            <input type="text" class="form-control" id="etablissement" formControlName="etablissement" placeholder="etablissement">
+          </div>
+        
+          <button type="button" class="btn btn-info" type="submit" >Enregistrer</button>
+
+      </fieldset>
+    </form>
+</div>
