--- a/src/app/update-etab/update-etab.component.html
+++ b/src/app/update-etab/update-etab.component.html
@@ -1,1 +1,25 @@
-<p>update-etab works!</p>
+<div class="container">
+    <h1>Modifier cet etablissement</h1>
+    <form [formGroup]="form" (ngSubmit)="submit()">
+      <fieldset>
+        
+        <div class="form-group">
+         <b><label for="nom">Entrez le code de l'etablissement</label></b>
+          <input type="text" class="form-control" id="code_etab" formControlName="code_etab" [(ngModel)]="etab.code_etab">
+        </div>
+        
+        <div class="form-group">
+           <b><label for="nom">Entrez le nom de l'etablissement</label></b>
+            <input type="text" class="form-control" id="nom_etab" formControlName="nom_etab" [(ngModel)]="etab.nom_etab">
+             
+          </div>
+        
+        <div class="form-group">
+            <b><label for="nom">Entrez l'université à laquelle appartient cet etablissement</label></b>
+            <input type="text" class="form-control" id="universite" formControlName="universite" [(ngModel)]="etab.universite">
+          </div>
+          <button type="button" class="btn btn-info" type="submit" >Enregistrer</button>
+
+      </fieldset>
+    </form>
+</div>
