--- a/src/app/update-filiere/update-filiere.component.html
+++ b/src/app/update-filiere/update-filiere.component.html
@@ -1,1 +1,25 @@
-<p>update-filiere works!</p>
+<div class="container">
+    <h1>Modifier cette filiére</h1>
+    <form [formGroup]="form" (ngSubmit)="submit()">
+      <fieldset>
+        
+        <div class="form-group">
+         <b><label for="nom">Entrez le code de la filiére</label></b>
+          <input type="text" class="form-control" id="code_filiere" formControlName="code_filiere" [(ngModel)]="filiere.code_filiere">
+        </div>
+        
+        <div class="form-group">
+           <b><label for="nom">Entrez le nom de la filiére</label></b>
+            <input type="text" class="form-control" id="nom_filiere" formControlName="nom_filiere" [(ngModel)]="filiere.nom_filiere">
+             
+          </div>
+        
+        <div class="form-group">
+            <b><label for="nom">Entrez l'etablissement à laquelle appartient cette filiére</label></b>
+            <input type="text" class="form-control" id="etablissement" formControlName="etablissement" [(ngModel)]="filiere.etablissement">
+          </div>
+          <button type="button" class="btn btn-info" type="submit" >Enregistrer</button>
+
+      </fieldset>
+    </form>
+</div>
